--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,9 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">MyHealth</string>
+  <string name="app_name">MyHealth</string>
     <string name="action_settings">Settings</string>
+    <string name="hello_world">Hello world!</string>
     <string name="main_welcome">Welcome</string>
+    <string name="title_activity_bluetooth">BluetoothActivity</string>
+    <string name="device_receiving">Connecting...</string>
+    <string name="device_bp">Blood measurements:</string>
+    <string name="device_pu">Pulse measurements:</string>
+    <string name="device_ecg">ECG measurements:</string>
+    <string name="title_activity_blood_pressure">BloodPressure</string>
+
     
 
 </resources>
